# yomiepub-studio

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  start_yomiepub.bat  start_yomiepub.command
.github/workflows/: tests.yml
YomiEpub Studio.app/Contents/: Info.plist
YomiEpub Studio.app/Contents/MacOS/: YomiEpub Studio
YomiEpub Studio.app/Contents/Resources/: YomiEpub.icns  jp_ebook_furigana_bilingual_pipeline-0.1.0-py3-none-any.whl  jp_ebook_furigana_bilingual_pipeline-0.1.1-py3-none-any.whl
app/backend/jp_ebook_pipeline/: __init__.py  cli.py  converter.py  epub.py  furigana.py  html_tools.py  models.py  server.py
app/frontend/: README.md  index.html  package.json
app/frontend/src/: App.jsx  styles.css
docs/: 01_overview.md  02_install_koreader_on_android_ereader.md  03_prepare_japanese_ebook.md  04_convert_to_horizontal.md  05_add_furigana.md  06_generate_bilingual_epub.md  07_transfer_to_ereader.md  08_troubleshooting.md
samples/: sample_public_domain_text.txt
scripts/: add_furigana.py  bilingual_align.py  convert.py  rebuild_macos_app_bundle.sh
tests/: conftest.py  test_epub_generation.py  test_furigana.py  test_server.py
